--- a/css/about.css
+++ b/css/about.css
@@ -28,12 +28,14 @@
   color: white;
   background-color: #053d4d;
 }
-.nav-link:hover{
+.nav-link:hover {
   color: black;
-
 }
 .nav-tabs li button {
   text-align: center;
+}
+.tab-content {
+  display: block;
 }
 .section-1,
 .section-2 {
@@ -41,18 +43,39 @@
   flex-wrap: wrap;
 }
 .section-1 .item {
+  text-align: center;
+  background-color: white;
   border: 3px solid #222588;
   border-radius: 10px;
-  width: 30%;
   padding: 10px;
 }
 .section-2 .item {
+  text-align: center;
+  background-color: white;
   border: 3px solid #222588;
   padding: 8px;
   margin: 8px 0px;
   border-radius: 10px;
 }
-
+.section-1 .name {
+  font-family: Raleway;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+}
+.section-1 .designation {
+  font-size: 20px;
+}
+.section-1 .contact {
+  font-family: Lato;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+}
 @media only screen and (max-width: 1024px) {
   .heading {
     font-size: 30px;
@@ -91,5 +114,8 @@
   }
   .section-2 .item {
     margin: 8px auto;
+  }
+  .tab-content {
+    display: none;
   }
 }
