--- a/css/nav&footer.css
+++ b/css/nav&footer.css
@@ -123,8 +123,8 @@ a#logo3:hover > img{
     position: absolute;
     transform: translateX(-100vw);
     text-align: center;
-    width: 90%;
-    height: 90%;
+    width: 90vw;
+    height: 90vh;
     background: rgba(22, 25, 130, 0.969);
   }
   .toggle-icon{
