--- a/css/FAQs.css
+++ b/css/FAQs.css
@@ -1,12 +1,27 @@
-.accordion-button{
-    background-color: #DEE8F6 !important;
+.accordion-button {
+  background-color: #dee8f6 !important;
+  font-size: 1.15rem;
+  font-weight: 600;
 }
-.heading{
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 47px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    text-align: center;
+.accordion-button:focus {
+  box-shadow: none;
+}
+.accordion-button:not(.collapsed) {
+  color: black;
+}
+.heading {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 47px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+
+@media only screen and (max-width: 360px) {
+  .heading {
+    font-size: 20px;
+    line-height: 27px;
+  }
 }
