--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -208,6 +208,7 @@
   background-color: white;
   border: 3px solid #222588;
   border-radius: 10px;
+  margin: 8px 0px;
   padding: 10px;
 }
 .section-2 .item {
@@ -251,6 +252,15 @@
     line-height: 20px;
     text-align: left !important;
   }
+  .section-1 .name {
+    font-size: 20px;
+  }
+  .section-1 .designation {
+    font-size: 16px;
+  }
+  .section-1 .contact{
+    font-size: 18px;
+  }
 }
 @media only screen and (max-width: 760px) {
   .nav-tabs {
@@ -272,17 +282,39 @@
     text-align: left !important;
   }
   .section-1 .item {
-    width: 100%;
+    width: 80%;
     margin: 8px 0px;
   }
   .section-2 .item {
     margin: 8px auto;
+  }
+  .section-1 .name {
+    font-size: 20px;
+  }
+  .section-1 .designation {
+    font-size: 16px;
+  }
+  .section-1 .contact{
+    font-size: 18px;
+  }
+  .section-2 .name {
+    font-size: 16px;
+  }
+  .section-2 .designation {
+    font-size: 12px;
+  }
+  .section-2 .contact{
+    font-size: 14px;
   }
   .tab-content {
     display: none;
   }
 }
 @media only screen and (max-width: 360px){
+  .section-1 .item {
+    width: 100%;
+    margin: 8px 0px;
+  }
   .section-1 .name {
     font-size: 16px;
   }
@@ -290,6 +322,15 @@
     font-size: 12px;
   }
   .section-1 .contact{
+    font-size: 14px;
+  }
+  .section-2 .name {
+    font-size: 16px;
+  }
+  .section-2 .designation {
+    font-size: 12px;
+  }
+  .section-2 .contact{
     font-size: 14px;
   }
 }
